crates/ir/tests/snapshots/lower_test__ownership__match_guard_branch_local_consume.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__match_guard_branch_local_consume

import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(m) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
fn consume(v0: ~String) -> Int =
  1

fn test(v1: Int, v2: ~String) -> Int =
  let v10: Bool = eq_int(v1, 0)
  if v10 {
    let_join v9(v8: Bool) =
      if v8 {
        10
      } else {
        0
      }
    in
    let v5: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
    let v6: Int = call consume(v2)
    let v7: Bool = trait_call core/ord.Ord.lt(v5, 0, v6)
    jump v9(v7)
  } else {
    let v4: Bool = eq_int(v1, 1)
    if v4 {
      let v3: Int = call consume(v2)
      v3
    } else {
      0
    }
  }
