crates/ir/tests/snapshots/lower_test__ownership__match_guard_shared_access_ok.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__match_guard_shared_access_ok

import core/peek/peek as peek(h) -> h
import core/list/last as last(List[u3]) -> Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5) -> List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool) -> List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1) -> y1
import core/list/map as map(List[y], (y) -> a1) -> List[a1]
import core/vec/to_list as to_list(Vec[c8]) -> List[c8]
import core/io/println as println(k) -> Unit
import core/option/Some as Some(e) -> Option[e]
import core/result/Ok as Ok(g) -> Result[f, g]
import core/result/Err as Err(f) -> Result[f, g]
import core/list/Cons as Cons(h, List[h]) -> List[h]
fn len(v0: String) -> Int =
  1

fn test(v1: Option[~String], v2: Int) -> Int =
  let v8: Bool = eq_int(v2, 0)
  if v8 {
    let_join v7(v6: Bool) =
      if v6 {
        10
      } else {
        0
      }
    in
    let v3: Dict[core/ord.Ord, Int] = get_dict core/ord.Ord[Int]
    let v4: Int = call len("hello")
    let v5: Bool = trait_call core/ord.Ord.lt(v3, 0, v4)
    jump v7(v5)
  } else {
    0
  }
