crates/ir/tests/snapshots/lower_test__ownership__own_data_pattern_shared_coerce.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module ownership__own_data_pattern_shared_coerce

struct Box { value: ~String }

fn test(v0: Box) -> String =
  let v1: ~String = project v0.0
  v1
